=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.02 - IN DEVELOPMENT

=over

=item *

Fixed broken templates.kds in Default element library. [Noam Weinstein]

=item *

Stealing a story now logs a discrete action for the theft. [Noam Weinstein]

=item *

Element classes can now override sort order of available children. [Noam Weinstein]

=item *

Open application in a new window/tab if clicking on a navigation link
with the CTRL key pressed or when middle-clicking. [Bodo Schulze]

=item *

Fixed known issues with multiple windows/tabs.  Login/Logout is now
browser-global not window/tab-specific. Use one authentication cookie
to store window_id/session_id mapping for all windows and use
QUERY/tmpl_var communication channel to pass the window_id around.
Also removed config directive MaxConcurrentKrangSessions. [Bodo Schulze]

=item *

Add Fedora 8 as a platform for building. [Michael Peters]

=item *

Added C<Krang::Schedule::Action::archive> to allow scheduled archiving
of stories and media. [Bodo Schulze]

=item *

Script F<bin/krang_upload_templates> uploads templates as UTF-8 if
Charset is UTF-8. [Bodo Schulze]

=item * 

History mechanism is not tied to specific types of objects and can be extended
by addons to include any other objects. [Michael Peters]

=item * 

Added display of IDs to Site & Category's Find screens, and 
to Site's Edit & View screens. [Noam Weinstein]

=item *

Fixed bug #32 along with a related bug in
C<Krang::Publisher->unpublish_story()> where after deleting a story
its preview path would not be deleted even if it is empty. [Bodo
Schulze]

=item *

Fixed long standing bug where Edit button is present when viewing an
old Story version. [Bodo Schulze]

=back



=head2 3.011 - March 20, 2008

=over

=item *

Added --maintain-versions mode (and associated tests) to publisher
to rewrite existing versions of live stories to site. [Noam Weinstein]

=back


=head2 3.01 - February 1, 2008

=over
